--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
             <fieldset classs="form-group">
                 <legend class="border-bottom mb-4">Join Today</legend>
                 <dir class="form-group">
-                    username
+                    form-group username
                     <input type="text" name="username" placeholder="Username">
                         <div class="invalid-feedback">
                             invalid-feedback
@@ -15,8 +15,8 @@
 
                 </dir>
                 <dir class="form-group">
-                    password
-                    <input type="password" name="password" placeholder="Password">
+                    form-group password
+                    <input type="text" name="password" placeholder="Password">
                         <div class="invalid-feedback">
                             invalid-feedback
                         </div>
